--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div>
                 <h1>Contact Me</h1>
                 <p>Send me a message and I'll get back to you as soon as I can.</p>
-                <form action="https://formspree.io/f/mdoppwqe" method="POST">
+                <form action="https://formspree.io/f/xovekjnr" method="POST">
                     <input name="name" type="text" id="name" placeholder="Your name" required>
                     <input name="_replyto" type="text" id="email" placeholder="Your email" required>
                     <textarea name="message" id="" cols="30" rows="10" placeholder="Type your message here..."
